--- a/ae-05.Rmd
+++ b/ae-05.Rmd
@@ -5,162 +5,211 @@ date: "`r Sys.Date()`"
 output: pdf_document
 editor_options: 
   chunk_output_type: console
+  markdown: 
+    wrap: 72
 ---
 
-To demonstrate data wrangling we will use `flights`, a tibble in the **nycflights13** R package. It includes characteristics of all flights departing from New York City (JFK, LGA, EWR) in 2013. 
+To demonstrate data wrangling we will use `flights`, a tibble in the
+**nycflights13** R package. It includes characteristics of all flights
+departing from New York City (JFK, LGA, EWR) in 2013.
 
-
-
-```{r load-flights-data}
-library(nycflights13)  
+```{r load-packages, message = FALSE}
+library(tidyverse)
+library(nycflights13) #includes flights data
 ```
 
-The data frame has over 336,000 observations (rows), `r nrow(flights)` observations to be exact, so we will **not** view the entire data frame. Instead we'll use the commands below to help us explore the data.
+The data frame has over 336,000 observations (rows), `r nrow(flights)`
+observations to be exact, so we will **not** view the entire data frame.
+Instead we'll use the commands below to help us explore the data.
+
+```{r glimpse-data}
+glimpse(flights)
+```
+
+```{r column-names}
+names(flights)
+```
 
 ```{r explore-data}
-glimpse(flights)
-names(flights)
 head(flights)
-View(head(flights)) 
 ```
 
-The `head()` function returns "A tibble: 6 x 19" and then the first six rows of
-the `flights` data. A **tibble** is a tweaked, opinionated version of the `R`data frame. 
+The `head()` function returns "A tibble: 6 x 19" and then the first six rows of the `flights` data.
 
-There are a few differences a `tidyverse` tibble and an `R` data frame. Two of the main ones are described below.
+## Tibble vs. data frame
 
-First, it provides more information than a data frame. When you print a tibble, it will show the first ten rows and all of the columns that fit on the screen, along with the type of each column. Try this with the `flights` data. You can modify the number of rows and columns shown using the `print()` function.
+A **tibble** is an opinionated version of the `R` data frame. In other words, all tibbles are data frames, but not all data frames are tibbles!
 
-**Question:** Can you print the first three rows and all columns of the 
-`flights` data? Check the documentation!
+There are two main differences between a tibble and a data frame:
 
-```{r print}
+1.  When you print a tibble, the first ten rows and all of the columns
+    that fit on the screen will display, along with the type of each
+    column.
 
+Let's look at the differences in the output when we type `flights`
+(tibble) in the console versus typing `cars` (data frame) in the
+console.
+
+2.  Second, tibbles are somewhat more strict than data frames when it
+    comes to subsetting data. You will get an error message if you try
+    to access a variable that doesn't exist in a tibble. You will get
+    `NULL` if you try to access a variable that doesn't exist in a data
+    frame.
+
+```{r tibble-v-data-frame}
+flights$apple
+cars$apple
 ```
 
+## Data wrangling with `dplyr`
 
-Second, tibbles are somewhat more strict than data frames when it comes to 
-subsetting data.
+**dplyr** is the primary package in the tidyverse for data wrangling.
+[Click here](https://dplyr.tidyverse.org/) for the dplyr reference page.
+[Click
+here](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf)
+for the dplyr cheatsheet.
 
-### `select()`
+Quick summary of key dplyr functions[^1]:
 
-The `select()` function picks off one or more columns by name.
+[^1]: From [dplyr
+    vignette](https://cran.r-project.org/web/packages/dplyr/vignettes/dplyr.html)
 
-Let's say we want a dataset that only contains the variables `dep_delay` and
-`arr_delay`.
+**Rows:** 
+
+- `filter()`:chooses rows based on column values. 
+- `slice()`: chooses rows based on location. 
+- `arrange()`:  changes the order of the rows
+- `sample_n()`: take a random subset of the rows
+
+**Columns:** 
+
+- `select()`: changes whether or not a column is included.
+- `rename()`: changes the name of columns. 
+- `mutate()`: changes the values of columns and creates new columns. 
+
+**Groups of rows:**
+
+- `summarise()`: collapses a group into a single row.
+- `count()`: count unique values of one or more variables.
+- `group_by()`: perform calculations separately for each value of a variable
+
+## `select()`
+
+- Make a data frame that only contains the variables `dep_delay` and `arr_delay`.
 
 ```{r select-vars}
 select(flights, dep_delay, arr_delay)
 ```
 
-We can also use `select()` to exclude variables. Let's exclude `dep_delay` but
-keep all other variables.
+- Make a data frame that keeps every variable except `dep_delay`. 
 
 ```{r exclude-vars}
-select(flights, -dep_delay)
+# add code here
 ```
 
-We can also use `select()` to select a range of variables. Here, we select the 
-first three variables representing the departure day.
+- Make a data frame that includes all variables between `year` through `dep_delay` (inclusive). These are all variables that provide information about the departure of each flight.  
 
 ```{r include-range}
-select(flights, year:day)
+## add code 
 ```
 
-### `arrange()`
+- Use the `select` helper `contains()` to make a data frame that includes the variables associated with the arrival, i.e., contains the string "arr_" in the name. 
 
-The `arrange()` function orders rows (observations) in specific ways. 
-
-Let's arrange the data by descending departure delays, with large departure delays on top.
-
-```{r arrange-delays-desc}
-arrange(flights, desc(dep_delay))
+```{r arr-vars}
+# add code 
 ```
 
-Or with low departure delays on top.
+## The pipe
 
-```{r arrange-delays-asc}
-arrange(flights, dep_delay)
-```
-
-What if we only want to examine the `dep_delay` and `arr_delay` columns? We can combine `arrange()` and `select()`!
-
-```{r select-and-arrange}
-select(arrange(flights, desc(dep_delay)), dep_delay, arr_delay)
-```
-
-**It is not easy to understand what is going on in the code chunk above.**
-
-- we have to read from inside out and right to left
-- not clear which argument goes with which function
-- doesn't focus on the functions
-
-The pipe is a technique for passing information from one process to another. 
-
-```{r pipe-demo}
-flights %>%
-  arrange(desc(dep_delay)) %>%
-  select(dep_delay, arr_delay)
-```
+Before looking at more data wrangling functions, let's introduce the pipe. The **pipe**, `%>%`, is a technique for passing information from one process to
+another. We will use `%>%` mainly in dplyr pipelines to pass the output of the previous line of code as the first input of the next line of code. 
 
 When reading code "in English", say "and then" whenever you see a pipe.
 
-**Question:** How would you read the code chunk above in English? What is it accomplishing?
+**Question 1 (4 minutes)** The following code is equivalent to which line of code? Submit your response in Ed Discussion: https://edstem.org/us/courses/8027/discussion/590071
 
-### `slice()`
+```{r pipe-demo}
+flights %>%
+  select(dep_delay, arr_delay) %>%
+  head()
+```
 
-Slice selects rows based on their position.
+## `slice()`
 
-Here we slice off the first 5 rows of the `flights` data.
+- Select the first five rows of the `flights` data frame.
 
 ```{r slice}
 flights %>%
   slice(1:5)
 ```
 
-We can also slice the last two rows.
+- Select the last two rows of the `flights` data frame.
 
 ```{r last-two}
 flights %>%
   slice((n()-1):n())
 ```
 
-**Question:** What is the code chunk below accomplishing? Guess before running the code.
+## `arrange()`
 
-```{r arrange-slice}
+- Let's arrange the data by departure delay, so the flights with the shortest departure delays will be at the top of the data frame. **What does it mean for the `dep_delay` to have a negative value?**
+
+```{r arrange-delays}
 flights %>%
-  arrange(desc(dep_delay)) %>%
-  slice(1:5)
+  arrange(dep_delay)
 ```
 
-To add comments to code, use the pound sign. This is helpful for debugging as well - you can temporarily disable a line.
+- Now let's arrange the data by descending departure delay, so the flights with the longest departure delays will be at the top.
 
-**Question:** What will happen if you comment out the line containing 
-`arrange()` in the code chunk above? Try it.
+```{r arrange-delays-desc}
+## add code
+```
 
-### `filter()`
+- **Question 2 (5 minutes)**: Create a data frame that only includes the plane tail number (`tailnum`), carrier (`carrier`),  and departure delay for the flight with the longest departure delay. What is the plane tail number (`tailnum`) for this flight? Submit your response on Ed Discussion: https://edstem.org/us/courses/8027/discussion/590079
 
-`filter()` selects rows satisfying certain conditions.
+```{r max-delay}
+## add code
 
-We can use a single condition. Here we select all rows where the destination
-airport is RDU.
+```
+
+
+## `filter()`
+
+- Filter the data frame by selecting the rows where the destination airport is RDU.
 
 ```{r rdu}
 flights %>%
   filter(dest == "RDU")
 ```
 
-We can use more than one condition. Here we select all rows where the 
-destination airport is RDU and the arrival delay is less than 0.
+- We can also filter using  more than one condition. Here we select all rows where the destination airport is RDU and the arrival delay is less than 0.
 
 ```{r rdu-ontime}
 flights %>%
   filter(dest == "RDU", arr_delay < 0)
 ```
 
-More complex conditions are possible!
+We can do more complex tasks using logical operators: 
 
-**Question:** In plain English, what is the code below accomplishing?
+| operator      | definition                   |
+|:--------------|:-----------------------------|
+| `<`           | is less than?                |
+| `<=`          | is less than or equal to?    |
+| `>`           | is greater than?             |
+| `>=`          | is greater than or equal to? |
+| `==`          | is exactly equal to?         |
+| `!=`          | is not equal to?             |
+| `x & y`       | is x AND y?                  |
+| `x \| y`      | is x OR y?                   |
+| `is.na(x)`    | is x NA?                     |
+| `!is.na(x)`   | is x not NA?                 |
+| `x %in% y`    | is x in y?                   |
+| `!(x %in% y)` | is x not in y?               |
+| `!x`          | is not x?                    |
+
+The final operator only makes sense if `x` is logical (TRUE / FALSE).
+
+- **Question 3 (4 minutes)**: Describe what the code is doing in words. Submit your response in Ed Discussion: https://edstem.org/us/courses/8027/discussion/590083 
 
 ```{r nc-early}
 flights %>%
@@ -168,33 +217,33 @@ flights %>%
          arr_delay < 0 | dep_delay < 0)
 ```
 
-The table of logical operators below will be helpful as you work with filtering.
+## `count()`
 
-|operator | definition |
-|:----------|:--------|
-| `<` |   is less than? |
-| `<=` |   is less than or equal to? |
-| `>` |   is greater than? |
-| `>=` |   is greater than or equal to? |
-| `==` |   is exactly equal to? |
-| `!=` |   is not equal to? |
-| `x & y` |   is x AND y? |
-| `x \| y` |   is x OR y? |
-| `is.na(x)` |   is x NA? |
-| `!is.na(x)` |   is x not NA? |
-| `x %in% y` |   is x in y? |
-| `!(x %in% y)` |   is x not in y? |
-| `!x` |   is not x? |
+- Create a frequency table of the destination locations for flights from New York. 
 
+```{r count-dest}
+flights %>%
+  count(dest)
+```
 
-The final operator only makes sense if `x` is logical (TRUE / FALSE).
+- In which month was there the fewest number of flights? How many flights were there in that month? 
 
-### `mutate()`
+```{r count-month}
+## add code
+```
 
-`mutate()` creates a new variable.
+- **Question 4 (5 minutes)**: On which date (month + day) was there the largest number of flights? How many flights were there on that day? Submit your response on Ed Discussion: https://edstem.org/us/courses/8027/discussion/590086 
 
-In the code chunk below, `air_time` is converted to hours, and a new variable
-`mph` is created, corresponding to the miles per hour of the flight.
+```{r count-date}
+## add code
+```
+
+## `mutate()`
+
+Use `mutate()` to create a new variable.
+
+- In the code chunk below, `air_time` (minutes in the air) is converted to hours, and then  new variable `mph` is created, corresponding to the miles per hour of the
+flight.
 
 ```{r calculate-mph}
 flights %>%
@@ -203,101 +252,66 @@ flights %>%
   select(air_time, distance, hours, mph)
 ```
 
-Using `<=` in the mutate creates a new variable `on_time` that is TRUE if the flight is on time and FALSE if it is not.
+- **Question (4 minutes)**: Create a new variable to calculate the percentage of flights in each month. What percentage of flights take place in July? 
+```{r months-perc}
+## add code 
 
-```{r calculate-ontime}
-flights %>%
-  mutate(on_time = arr_delay <= 0) %>%
-  select(arr_delay, on_time)
 ```
 
-**Question:** What do you think will happen if you take the mean of the 
-`on_time` variable?
+## `summarize()`/ `summarise()`
 
-### `summarize()`
-
-`summarize` calculates summary statistics. It collapses rows into summary 
-statistics and removes columns irrelevant to the calculation.
+`summarise()` collapses the rows into summary statistics and removes columns irrelevant to the calculation.
 
 Be sure to name your columns!
 
 ```{r find-mean-delay}
 flights %>%
-  summarize(mean_dep_delay = mean(dep_delay))
+  summarise(mean_dep_delay = mean(dep_delay))
 ```
 
-**Question:** The code chunk above should return an NA. What is going wrong? Try to fix it to find the mean departure delay.
+**Question:** Why did this code return `NA`? 
+
+Let's fix it
 
 ```{r find-mean-delay-no-na}
 flights %>%
-  summarize(prop_on_time = mean(arr_delay <= 0, na.rm = TRUE))
+  summarize(mean_dep_delay = mean(dep_delay, na.rm = TRUE))
 ```
 
 ### `group_by()`
 
-`group_by()` is used for grouped operations. It's very powerful when paired with summarize to calculate summary statistics by group.
+`group_by()` is used for grouped operations. It's very powerful when
+paired with `summarise()` to calculate summary statistics by group.
 
-Here we find the proportion of flights that are on time for each month of the year.
+Here we find the mean and standard deviation of departure delay for each month. 
 
 ```{r delays-by-month}
 flights %>%
   group_by(month) %>%
-  summarize(prop_on_time = mean(arr_delay <= 0, na.rm = TRUE))
+  summarize(mean_dep_delay = mean(dep_delay, na.rm = TRUE), 
+            sd_dep_delay = sd(dep_delay, na.rm = TRUE))
 ```
 
-We can calculate more than one summary statistic in `summarize()`. In addition to the proportion on time for each month, let's find the maximum delay, median delay, and the count of flights in each month.
+- **Question 5 (4 minutes)**: What is the median departure delay for each airport in NYC (`origin`)? Which airport has the shortest median departure delay? Submit your response on Ed Discussion: https://edstem.org/us/courses/8027/discussion/590091
 
-Here `n()` calculates the current group size.
-
-```{r summarize-by-month}
-flights %>%
-  group_by(month) %>%
-  summarize(prop_on_time = mean(arr_delay <= 0, na.rm = TRUE),
-            max_delay = max(arr_delay, na.rm = TRUE),
-            median_delay = median(arr_delay, na.rm = TRUE),
-            count = n())
+```{r dep-origin}
+## add code
 ```
 
-Finally, let's see what the proportion on time is for EWR, JFK, and LGA.
 
-```{r ontime-nyc}
-flights %>%
-  group_by(origin) %>%
-  summarize(on_time = mean(dep_delay <= 0, na.rm = TRUE))
-```
+## Additional Practice
 
-### `count()`
+(1) Create a new dataset that only contains flights that do not have a missing departure time. Include the columns `year`, `month`, `day`,
+`dep_time`, `dep_delay`, and `dep_delay_hours` (the departure delay in hours). *Hint: Note you may need to use `mutate()` to make one or more of these variables.*
 
-`count` counts the unique values of one or more variables. It creates frequency tables.
-
-```{r count}
-flights %>%
-  count(origin)
-```
-
-**Question:** What is the code chunk below doing?
-
-```{r find-prop}
-flights %>%
-  count(origin) %>%
-  mutate(prop = n / sum(n))
-```
-
-## Practice
-
-(1) Create a new dataset that only contains flights that do not have a missing departure time. Include the columns `year`, `month`, `day`, `dep_time`, `dep_delay`, and `dep_delay_hours` (the departure delay in hours). Note you  may need to use `mutate()` to make one or more of these variables.
-
-```{r practice-1}
+```{r add-practice-1}
 
 ```
 
-(2) For each airplane (uniquely identified by `tailnum`), use a `group_by()` paired with `summarize()` to find the sample size, mean, and standard deviation of flight distances. Then, pick off the top 5 and bottom 5 airplanes in terms of mean distance traveled per flight.
+(2) For each airplane (uniquely identified by `tailnum`), use a
+`group_by()` paired with `summarize()` to find the sample size,
+mean, and standard deviation of flight distances. Then include only the top 5 and bottom 5 airplanes in terms of mean distance traveled per flight in the final data frame.
 
-```{r practice-2}
+```{r add-practice-2}
   
 ```
-
-### Additional Resources
-
-- https://rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf
-- https://style.tidyverse.org/
